--- a/systemd/udpxy.service
+++ b/systemd/udpxy.service
@@ -3,10 +3,11 @@ Description=udpxy: UDP multicast to TCP (HTTP) relay proxy
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/udpxy -a switch0 -p 5000 -m eth0 -l /var/log/udpxy.log
-Type=forking
+Type=simple
 Restart=on-failure
-KillMode=control-group
+EnvironmentFile=/etc/default/udpxy
+ExecStart=/usr/bin/udpxy -T -p $UDPXY_PORT $UDPXY_OPTS
 
 [Install]
 WantedBy=multi-user.target
+
